// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostCard Snapshots renders default state correctly 1`] = `
<TouchableOpacity
  accessibilityLabel="Post by john.doe"
  accessibilityRole="button"
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#1e293b",
      "borderRadius": 12,
      "marginHorizontal": 16,
      "marginVertical": 6,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6366f1",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 10,
          "width": 40,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
          }
        }
      >
        J
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#f1f5f9",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        john.doe
      </Text>
      <Text
        style={
          {
            "color": "#64748b",
            "fontFamily": "monospace",
            "fontSize": 11,
          }
        }
      >
        GABCD1...WXYZ
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 11,
        }
      }
    >
      928d ago
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#cbd5e1",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    This is a sample post content that demonstrates the PostCard component functionality.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 12,
        }
      }
    >
      ♥ 
      42
    </Text>
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 12,
        }
      }
    >
      ◎ 
      0
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`PostCard Snapshots renders with long content correctly 1`] = `
<TouchableOpacity
  accessibilityLabel="Post by john.doe"
  accessibilityRole="button"
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#1e293b",
      "borderRadius": 12,
      "marginHorizontal": 16,
      "marginVertical": 6,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6366f1",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 10,
          "width": 40,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
          }
        }
      >
        J
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#f1f5f9",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        john.doe
      </Text>
      <Text
        style={
          {
            "color": "#64748b",
            "fontFamily": "monospace",
            "fontSize": 11,
          }
        }
      >
        GABCD1...WXYZ
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 11,
        }
      }
    >
      928d ago
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#cbd5e1",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    This is a very long post content that spans multiple lines and demonstrates how the PostCard component handles longer text content. It should wrap properly and maintain good readability across different screen sizes.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 12,
        }
      }
    >
      ♥ 
      42
    </Text>
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 12,
        }
      }
    >
      ◎ 
      0
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`PostCard Snapshots renders with zero likes correctly 1`] = `
<TouchableOpacity
  accessibilityLabel="Post by john.doe"
  accessibilityRole="button"
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#1e293b",
      "borderRadius": 12,
      "marginHorizontal": 16,
      "marginVertical": 6,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6366f1",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 10,
          "width": 40,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
          }
        }
      >
        J
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#f1f5f9",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        john.doe
      </Text>
      <Text
        style={
          {
            "color": "#64748b",
            "fontFamily": "monospace",
            "fontSize": 11,
          }
        }
      >
        GABCD1...WXYZ
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 11,
        }
      }
    >
      928d ago
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#cbd5e1",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    This is a sample post content that demonstrates the PostCard component functionality.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 12,
        }
      }
    >
      ♥ 
      0
    </Text>
    <Text
      style={
        {
          "color": "#64748b",
          "fontSize": 12,
        }
      }
    >
      ◎ 
      0
    </Text>
  </View>
</TouchableOpacity>
`;
